# augur

./: pyproject.toml
augur/: __main__.py  augur.py  cli.py  remember.py  resources.py
augur/_history/: 2023.json
