[tool.poetry]
name = "augur"
version = "0.1.0"
description = "A CLI magic 8-ball with an edge."
authors = ["Evan Pearson <ejp1989@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"
rich = "^13.3.3"
markdown = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
